# lopdf_rb

./: .gitignore  Cargo.toml  README.md  Rakefile  lopdf_rb.gemspec
.github/workflows/: ci.yml
ext/lopdf_rb/: Cargo.toml  extconf.rb
ext/lopdf_rb/src/: annotation.rs  document.rs  geometry.rs  lib.rs  manipulation.rs  metadata.rs  metrics.rs  resolve.rs  stamp.rs
lib/: lopdf_rb.rb
lib/lopdf_rb/: version.rb
