[workspace]
resolver = "2"
members = ["ext/lopdf_rb"]

[workspace.metadata]
description = "lopdf_rb — Ruby bindings for the lopdf PDF library"
repository = "https://github.com/amphora/lopdf_rb"

# Optimise the cdylib for size and speed. LTO + single codegen unit
# produces a smaller, faster .so at the cost of longer compile times.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
